Various minor improvements to reference document
 - add version notes in case of JERRY_TYPEDARRAY_BIGINT64, JERRY_TYPEDARRAY_BIGUINT64
 - add code highlight to type values (JERRY_INIT_MEM_STATS_SEPARATE, JERRY_INIT_MEM_STATS_SEPARATE)
 - add newlines to break the version notes into separate lines
 - add missing periods

JerryScript-DCO-1.0-Signed-off-by: Zsolt Borbély zsborbely.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -11,7 +11,7 @@ Enum that contains the following elements:
  - JERRY_INIT_MEM_STATS_SEPARATE - **deprecated**, dump memory statistics and reset peak values after parse
  - JERRY_INIT_DEBUGGER - **deprecated**, an unused placeholder now
 
-*Changed in version 2.0*: JERRY_INIT_MEM_STATS_SEPARATE and JERRY_INIT_DEBUGGER are now deprecated and not used internally.
+*Changed in version 2.0*: `JERRY_INIT_MEM_STATS_SEPARATE` and `JERRY_INIT_DEBUGGER` are now deprecated and not used internally.
 
 ## jerry_type_t
 
@@ -127,6 +127,7 @@ Possible compile time enabled feature types:
  - JERRY_FEATURE_WEAKSET - WeakSet support
 
 *New in version 2.0*.
+
 *Changed in version 2.3* : Added `JERRY_FEATURE_WEAKMAP`, `JERRY_FEATURE_WEAKSET` values.
 
 ## jerry_container_type_t
@@ -543,6 +544,7 @@ typedef void (*jerry_object_native_free_callback_t) (void *native_p);
 ```
 
 *New in version 2.0*: Renamed from `jerry_object_free_callback_t`.
+
 *Changed in version 2.2*: API calls are once again allowed. (See note)
 
 **See also**
@@ -727,6 +729,8 @@ API functions can return the `JERRY_TYPEDARRAY_INVALID` value if the
 TypedArray support is not in the engine.
 
 *New in version 2.0*.
+
+*Changed in version [[NEXT_RELEASE]]*: Added `JERRY_TYPEDARRAY_BIGINT64`, `JERRY_TYPEDARRAY_BIGUINT64` values.
 
 **See also**
 
@@ -2165,7 +2169,7 @@ jerry_value_is_bigint (const jerry_value_t value)
   - true, if the given `jerry_value_t` is a BigInt
   - false, otherwise
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -3703,7 +3707,7 @@ jerry_value_to_bigint (const jerry_value_t value);
   - converted BigInt value, if success
   - thrown error, otherwise
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -4152,7 +4156,7 @@ jerry_get_bigint_size_in_digits (jerry_value_t value)
   - number of digits (can be zero for BigInt zero)
   - if value is not a BigInt value, it returns with zero
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -4215,7 +4219,7 @@ jerry_get_bigint_digits (jerry_value_t value, uint64_t *digits_p, uint32_t size,
 - `sign_p` - the boolean passed to the function is set to false when the BigInt
              is positive, and set to true otherwise (this parameter can be NULL)
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -5192,7 +5196,7 @@ jerry_create_external_string (const jerry_char_t *str_p,
 - `free_cb` - optional callback which is called right before the string is freed
 - return value - value of the created string
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -5239,7 +5243,7 @@ jerry_create_external_string_sz (const jerry_char_t *str_p,
 - `free_cb` - optional callback which is called right before the string is freed
 - return value - value of the created string
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -5348,7 +5352,7 @@ jerry_create_bigint (const uint64_t *digits_p, uint32_t size, bool sign)
   - value of the created bigint, if success
   - thrown error, otherwise
 
-*New in version [[NEXT_RELEASE]]*
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
@@ -5757,6 +5761,7 @@ jerry_has_property (const jerry_value_t obj_val,
   -  true/false API value  - depend on whether the property exists
 
 *Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+
 *Changed in version 2.3*: The return value can be an error value.
 
 **Example**
@@ -5817,6 +5822,7 @@ jerry_has_own_property (const jerry_value_t obj_val,
   -  true/false API value - depend on whether the property exists
 
 *Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+
 *Changed in version 2.3*: The return value can be an error value.
 
 **Example**
