Empty external arraybuffers should be detachable
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -9011,7 +9011,10 @@ jerry_get_arraybuffer_pointer (const jerry_value_t value);
 - `value` - Array Buffer object.
 - return value
   - pointer to the Array Buffer's data area.
-  - NULL if the `value` is not an Array Buffer object.
+  - NULL if the `value` is:
+    - not an Array Buffer object
+    - an external ArrayBuffer constructed with 0 length or NULL buffer
+    - an external ArrayBuffer has been detached
 
 *New in version 2.0*.
 
